[gd_scene load_steps=4 format=3 uid="uid://c634qgskmd0a"]

[ext_resource type="Script" uid="uid://b7tf0vacewlm2" path="res://scenes/ui/card_pile_view.gd" id="1_5fd14"]
[ext_resource type="PackedScene" uid="uid://d4g7iin5x7648" path="res://cards/menu_card/menu_card.tscn" id="1_iolsb"]
[ext_resource type="PackedScene" uid="uid://c4ioesrs574d7" path="res://scenes/ui/card_tooltip_popup.tscn" id="3_vf8oq"]

[node name="CardPileView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5fd14")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.100467, 0.0385, 0.11, 0.694118)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Discard Pile"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="CardGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 16
columns = 6

[node name="MenuCard" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard2" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard3" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard4" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard5" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard6" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard7" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard8" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard9" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard10" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard11" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard12" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard13" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard14" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard15" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard16" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard17" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard18" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard19" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard20" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard21" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard22" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard23" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard24" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard25" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="MenuCard26" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("1_iolsb")]
layout_mode = 2

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 11.0
offset_right = -20.0
offset_bottom = 71.0
grow_horizontal = 0
text = "Back"

[node name="CardTooltipPopup" parent="." instance=ExtResource("3_vf8oq")]
unique_name_in_owner = true
layout_mode = 1
